2010-05-14  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-exp.el (org-export-format-source-code-or-example):
	XEmacs compatibility.

	* org-latex.el (org-export-latex-tables): Accept comma in
	align string.

	* org-docbook.el (org-export-docbook-xslt-stylesheet): New option.
	(org-export-docbook-xslt-proc-command): Fix docstring.
	(org-export-docbook-xsl-fo-proc-command): Fix docstring.
	(org-export-as-docbook-pdf): Improve
	formatting of the xslt command.

	* org-exp.el (org-infile-export-plist): Check for XSLT setting.

	* org.el (org-file-contents): Improve error message.
	(org-set-regexps-and-options): Remove spaces at both ends.

2010-05-13  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-docbook.el (org-export-as-docbook-pdf): Improve
	formatting of the xslt command.

2010-05-13  Sebastian Rose  <sebastian_rose@gmx.de>

	* org-publish.el (org-publish-cache): Use one big hashmap for
	each project defined in `org-publish-project-alist'. The
	hashmap will hold pairs of our timestamp-filenames and
	timestamps, as well as pairs of source-paths and associated
	plists for arbitrary values. Currently only the files title is
	stored there.

	The caching feature writes the information gathered during
	publishing to disk and re-loads it from there the next time we
	publish the same project.  All this information will hence
	survive a restart of emacs.

	One cache file per publishing project is used.  The contents of
	that file is the elisp that fills the new variable
	`org-publish-cache'.  The cache file is named according to the
	project with `.cache' added and lives in
	`org-timestamp-directory'.

	* org-publish.el (initialize-files-alist): This function and
	the variable `org-publish-files-alist' are not used anymore in
	favour of the reloadable cache and the functions for handling
	it.  Removed.

	* org-publish.el (org-publish-validate-link) was not used
	anywhere.  Removed.

	* org-publish.el (org-publish-get-base-files): Added the